# travel-mcp-apps

./: .env.example  .fastapicloudignore  .gitignore  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  pyproject.toml  sprint_4_quickstart_checklist.md  sprint_4_travel_planner_prompt.md  test_scenario.py
.claude/: settings.json
.claude/skills/: gstack
app/: __init__.py  config.py  main.py  mcp_mounts.py  models.py
app/routers/: health.py  travel.py
docs/: chatgpt_apps_readiness_review.md  office_hours_trip_inbox_board_2026-04-30.md  testing_chatgpt_apps.md
docs/plans/: 2026-05-04-001-docs-align-mcp-ui-foundation-plan.md
mcp_clients/: base_client.py  packing_client.py  travel_client.py  weather_client.py
mcp_servers/: packing_server.py  travel_agent_server.py  travel_tips_server.py  weather_server.py
mcp_servers/widgets/: debug.mjs  package-lock.json  package.json  packing_checklist_preview.html  packing_checklist_v1.html  packing_checklist_v2.html  packing_checklist_v3.html  travel_activity_cards_preview.html  travel_activity_cards_v1.html  travel_activity_cards_v2.html  travel_activity_cards_v3.html  travel_destination_guide_preview.html  travel_destination_guide_v1.html  trip_board_v1.html  (+16 more)
sample_data/: __init__.py  weather_forecasts.py
services/: __init__.py  openweather.py  packing.py  travel_tips.py  trips.py
tests/: test_api.py  test_apps_ui_resources.py  test_config.py  test_packing_server.py  test_travel_agent_server.py  test_travel_tips.py  test_trip_store.py  test_weather_openweather.py
todos/: 001-ready-p1-mcp-learning-roadmap.md
(+21 files in other folders)
